# bgfxTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bgfxTemplate.sln  bgfxTemplate.vcxproj
src/: main.cpp
